--- a/10 SDN/SDN and nothing else.tex
+++ b/10 SDN/SDN and nothing else.tex
@@ -38,26 +38,24 @@
     \maketitle
 
 \section{SDN Introduction}
-    \subsection{Excercise One}
-    Remember previouse lab \footnote{Lab 4 routing} where you are using host rather than router to emulate some routing functionality. In this experiment we want to implement same functionality with SDN switches. To warm up our hands we will start by simple scenario:
+    \subsection{Exercise One}
+    Remember one of the previous labs\footnote{Lab 4: routing} where you are using host rather than router to emulate some routing functionality. In this experiment we want to implement same functionality with SDN switches. To warm up our hands we will start by simple scenario:
 
     \begin{itemize}
-    	\setlength{\itemindent}{10pt}
-    	\item Open switch.py and read it's codes carfully.
-    	\item Run this code with \textbf{sudo python switch.py}
-    	\item Ping h2 from h1.
-    	\item Capture OpenFlow hello packet on \textbf{lo} interface. (Filter wireshark output with \textbf{of} filter)
+    	\item Open \path{switch.py} and read it's codes carefully.
+    	\item Run this code with \lstinline{sudo python switch.py}
+    	\item Ping \textit{h2} from \textit{h1}.
+    	\item Capture OpenFlow hello packet on \textit{lo} interface. (Filter \lstinline{wireshark} output with \lstinline{of} filter)
     \end{itemize}
 
-    \subsubsection*{Lab Report}
+    \subsubsection*{Report}
     \begin{itemize}
-    	\setlength{\itemindent}{0pt}
-    	\item Expain line 21 to 26 of switch.py.
-    	\item Read \href{http://flowgrammable.org/sdn/openflow/state-machine/}{this link} and explain switch handshak with controller. What is xid of your packets. Justify your answer with captured packets. \textbf{Don't copy and paste text from refrence in your lab report}.
+    	\item Explain line 21 to 26 of \path{switch.py}.
+    	\item Read \url{http://flowgrammable.org/sdn/openflow/state-machine/} and explain switch handshake with controller. What is \texttt{xid} of your packets. Justify your answer with captured packets. \textbf{Don't copy and paste text from reference in your lab report}.
     \end{itemize}
 
-    \subsection{Excercise Two}
-    Use what you learned in previouse exercise and create figure \ref{fig:linearRouters} topology. Configure switches in this topology where ??? we can ping each host from each host. Show your final result to instructors.
+    \subsection{Exercise Two}
+    Use what you learned in previous exercise and create figure \ref{fig:linearRouters} topology. Configure switches in this topology where ??? we can ping each host from each host. Show your final result to instructors.
 
     \begin{figure}[H]
     	\centering
@@ -67,17 +65,16 @@
     \end{figure}
 
 
-\section{Exercises with multitables flows}
-    \subsection*{Excercise Three}
-    In this section we are loading switch flows from another files and axamining it's functionality.
+\section{Exercises with Multitables Flows}
+    \subsection*{Exercise Three}
+    In this section we are loading switch flows from another files and examining it's functionality.
 
     \begin{itemize}
-    	\setlength{\itemindent}{10pt}
-    	\item Execute \textbf{sudo python topo.py} 
-    	\item Execute \textbf{sh ovs-ofctl add-flows s1 tables.txt} on mininet console.
+    	\item Execute \lstinline{sudo python topo.py} 
+    	\item Execute \lstinline{sh ovs-ofctl add-flows s1 tables.txt} on mininet console.
     	\item Ping each host from other hosts.
     	\item Capture ICMP packets on each host and observe network behavior.
-    	\item Modify tables.txt to drop packets between h1 and h2.
+    	\item Modify \path{tables.txt} to drop packets between \textit{h1} and \textit{h2}.
     \end{itemize}
 
     \begin{figure}[H]
@@ -88,9 +85,8 @@
     \end{figure}
 
 
-    \subsubsection*{Lab Report}
+    \subsubsection*{Report}
     \begin{itemize}
-    	\setlength{\itemindent}{0pt}
-    	\item Can you explain switch behavior? Justify your answer with wireshark output and tables.txt file.
+    	\item Can you explain switch behavior? Justify your answer with \lstinline{wireshark} output and \path{tables.txt} file.
     \end{itemize}
 \end{document}
