--- a/4 Static and dynamic routing/Static and Dynamic routing.tex
+++ b/4 Static and dynamic routing/Static and Dynamic routing.tex
@@ -41,13 +41,12 @@
     As in the previous lab, we will divide the students into four groups, each with two workstations, a router, and two hubs, which are to be connected as shown in Figure 4.10.
     The IP addresses of the routers and hosts are given in Table 4.2 and Table 4.3, respectively.
     \begin{table}[H]
-        \caption{\textbf{Table 4.2 and 4.3} Router and Host IP addresses for Fig. 4.10}
+        \caption{\textit{Table 4.2 and 4.3} Router and Host IP addresses for Fig. 4.10}
         \vspace{5pt}
         \centering
-        \large
-        \begin{tabular}{ *7l }
+        \begin{tabular}{ *2l | *2l | *2l }
             \hline \hline
-            \multicolumn{2}{c}{Router} & \multicolumn{2}{c}{HOST\_A} & \multicolumn{2}{c}{HOST\_B} \\
+            \multicolumn{2}{l|}{Router} & \multicolumn{2}{l|}{Host\textsubscript{A}} & \multicolumn{2}{l}{Host\textsubscript{B}} \\
             eth0 & eth1 & Name & Ip Address & Name & IP Address \\
             \hline 
             128.238.61.1/24 & 128.238.62.1/24 & h0(shakti) & 128.238.61.101/24 & h1(vayu) & 128.238.62.101/24 \\
@@ -61,71 +60,79 @@
     \begin{figure}[H]
         \centering
         \begin{tikzpicture}[font=\sf]
-            \node[draw] (h1) at (-2,-2){HOST\_A};
+            \node[draw] (h1) at (-2,-2){Host\textsubscript{A}};
             \node[draw,circle] (hub2) at (-2,0){Switch 2};
             \node[draw,rounded corners] (router) at (0,0){\shortstack{Router}};
             \node[draw,circle] (hub1) at (2,0){Switch 1};
-            \node[draw] (h0) at (2,-2){HOST\_B};
+            \node[draw] (h0) at (2,-2){Host\textsubscript{B}};
         
             \draw[thick] (h0) -- (hub1);
             \draw[thick] (h1) -- (hub2);
             \draw[thick] (hub1) -- (router);
             \draw[thick] (hub2) -- (router);
         \end{tikzpicture}
-        \caption{\textbf{Figure 4.10.} Simple router experiment.}        
+        \caption{\textit{Figure 4.10.} Simple router experiment.}        
     \end{figure}
 
 \section{Simple Routing}
-    Configure the IP addresses of your workstations and the router as shown in Figure 4.10, Table 4.2 and Table 4.3 (select one of row in table). \\
+    Configure the IP addresses of your workstations and the router as shown in Figure 4.10, Table 4.2 and Table 4.3 (select one of row in table).
+
     Initially your host’s routing table has no entry for the subnet on the other side of the router.
-    In order to be connected, you need to add a routing entry for the other subnet in the routing table of your workstation (see section 4.3.1). \\
-    \, \textit{like: }\texttt{ip route add 192.168.1.0/24 [dev eth0|via 192.168.1.1]} \\
-    \, \textit{like: }\texttt{route add -net 192.168.1.0/24 [gw 192.168.1.1] dev eth0}\\
-    Run \textbf{tcpdump -en} on your machine, and \textbf{tcpdump -en} on your partner’s machine in the other subnet simultaneously:
-    \begin{itemize}
-        \item [\#] \textbf{tcpdump -en host} \textit{remote-host} and \textit{your-machine}
-    \end{itemize}
-    Send \textbf{ping} messages continuously to other machine:
-    \begin{itemize}
-        \item [\#] \textbf{ping -sv} \textit{remote-host}
-    \end{itemize}
-    After receiving the tenth echo reply, quit \textbf{ping} and save the \textbf{tcpdump} outputs from both machines.
-    Also, copy the \textbf{ping} output. \\
-    During this exercise, don’t run the \textbf{ping} program at the same time.
+    In order to be connected, you need to add a routing entry for the other subnet in the routing table of your workstation (see section 4.3.1).
+    Like:
+    \begin{lstlisting}
+ip route add 192.168.1.0/24 [dev eth0|via 192.168.1.1]
+route add -net 192.168.1.0/24 [gw 192.168.1.1] dev eth0
+    \end{lstlisting}
+
+    Run \lstinline{tcpdump -en} on your machine, and \lstinline{tcpdump -en} on your partner’s machine in the other subnet simultaneously:
+    \begin{lstlisting}[emph={your-host, remote-host}]
+tcpdump -en host remote-host and your-machine
+    \end{lstlisting}
+    Send \lstinline{ping} messages continuously to other machine:
+    \begin{lstlisting}[emph={your-host, remote-host}]
+ping -sv remote-host
+    \end{lstlisting}
+    After receiving the tenth echo reply, quit \lstinline{ping} and save the \lstinline{tcpdump} outputs from both machines.
+    Also, copy the \lstinline{ping} output.
+
+    During this exercise, don’t run the \lstinline{ping} program at the same time.
     For clean results, do your experiments in turn.
-    \subsubsection*{Lab Report}
+    
+    \subsubsection*{Report}
     \begin{itemize}
-        \setlength{\itemindent}{0pt}
         \item When a packet was sent to a workstation in the other subnet, explain how the source and destination Ethernet addresses were changed.
         \item What are the source and destination addresses in the IP and Ethernet headers of a packet that went from your machine to the router?
         \item What are the source and destination addresses in the IP and Ethernet headers of a packet that went from the router to your partner’s machine?
         \item Answer the above two questions, but now for the echo reply that was returned from your partner’s machine.
     \end{itemize}
-    \subsubsection*{ Lab Report}
+    
+    \subsubsection*{Report}
     \begin{itemize}
-        \setlength{\itemindent}{0pt}
-        \item Use the \textbf{tcpdump} outputs from both machines to calculate the average delay that a packet experienced in the router. Note that the system times of the two machines might be different. Show all the steps and submit the \textbf{tcpdump} outputs with your report.
+        \item Use the \lstinline{tcpdump} outputs from both machines to calculate the average delay that a packet experienced in the router. Note that the system times of the two machines might be different. Show all the steps and submit the \lstinline{tcpdump} outputs with your report.
         \item Compare this value with the previous value in the case of the bridge. Which, a router or a bridge, is faster? Why?
     \end{itemize}
 
 
 \section*{RIP exercises}
     In this section, we will examine the operation of RIP. To enable the RIP routing process in a router, use the following commands in the \textit{Global Configuration} mode.
-    \begin{itemize}
-        \item \texttt{Router(config)\#} \textbf{router rip}
-        \item \texttt{Router(config)\#} \textbf{network} \textit{network-number}
-    \end{itemize}
-    where \textit{network-number} could be 128.238.0.0. To remove the network, use:
-    \begin{itemize}
-        \item \texttt{Router(config)\#} \textbf{no network} \textit{network-number},
-    \end{itemize}
+    \begin{lstlisting}[language={cisco}, emph={network-number}]
+Router(config)# router rip
+Router(config)# network network-number
+    \end{lstlisting}
+    where \textit{network-number} could be 128.238.0.0.
+    To remove the network, use:
+    \begin{lstlisting}[language={cisco}, emph={network-number}]
+Router(config)# no network network-number
+    \end{lstlisting}
     To shutdown the RIP process, use:
-    \begin{itemize}
-        \item \texttt{Router(config)\#} \textbf{no router rip}
-    \end{itemize}
+    \begin{lstlisting}[language={cisco}]
+Router(config)# no router rip
+    \end{lstlisting}
     Consider Figure 4.11 as our network topology for this section.
-    % Since the IP address of ethernet1 in router4 is the only interface which is different from the initial configuration in Appendix B, we will reboot all the four routers to restore their default configurations, and change the IP address on the ethernet1 in router4 only. Since our workstations started \textbf{routed} at boot-up time, no further action is needed to run RIP on the workstations. \footnote{The lab instructor should make sure that the IP-Forwarding function is enabled in each host.}
-    Configure network router and workstation’s as Figure 4.11. Since our workstation’s don’t have \textbf{routed} package, you need to add route for subnet \texttt{128.238.0.0/16} to each workstation.
+    
+    % Since the IP address of \textit{ethernet1} in \textit{router4} is the only interface which is different from the initial configuration in Appendix B, we will reboot all the four routers to restore their default configurations, and change the IP address on the \textit{ethernet1} in \textit{router4} only. Since our workstations started \lstinline{routed} at boot-up time, no further action is needed to run RIP on the workstations. \footnote{The lab instructor should make sure that the IP-Forwarding function is enabled in each host.}
+    Configure network router and workstation’s as Figure 4.11. Since our workstation’s don’t have \lstinline{routed} package, you need to add route for subnet \textit{128.238.0.0/16} to each workstation.
     \begin{figure}[H]
         \centering
         \includegraphics[width=0.9\textwidth]{img/figure4-11.png}
@@ -133,20 +140,26 @@
 \section{RIP messages}
     Connect the routers and hosts and change the IP addresses of the workstations and router4 as shown in Figure 4.11.
     Also, make sure that your workstation has no other routing entries than your own subnet and your loopback interface.
-    For how to remove an entry from the host routing table, see Section 4.3. \\
+    For how to remove an entry from the host routing table, see Section 4.3.
+
     Run the RIP process in each router.
-    To avoid confusion, each router should be configured by only one person. \\
+    To avoid confusion, each router should be configured by only one person.
+
     After starting RIP in all the routers, test connections to other hosts by pinging them.
-    Once you can successfully reach all the hosts, run the following command to capture the RIP messages sent on your subnet: \\
-    \textbf{tcpdump -x -s 100 -c 4 udp port 520} or run \textbf{wireshark} on link \\
-    Save the routing table in your workstation (\texttt{sh ip route}).
-    Note the number of hops needed to reach destinations other than in your own subnet. \\
+    Once you can successfully reach all the hosts, run the following command to capture the RIP messages sent on your subnet, or run \lstinline{wireshark} on link:
+    \begin{lstlisting}
+tcpdump -x -s 100 -c 4 udp port 520
+    \end{lstlisting}
+
+    Save the routing table in your workstation (\lstinline{sh ip route}).
+    Note the number of hops needed to reach destinations other than in your own subnet.
+
     Mark and print two different RIP messages captured in your subnet (see Exercise 6 of Chapter 1).
     Exchange the printed RIP messages with students in other groups.
     You need eight different RIP messages for your lab report.
-    \subsubsection*{Lab Report}
+    
+    \subsubsection*{Report}
     \begin{itemize}
-        \setlength{\itemindent}{0pt}
         \item Explain why you can only get two different RIP messages in your subnet.
         Was a RIP packet forwarded by the routers?
         Why?
@@ -154,7 +167,6 @@
         \item For the other seven RIP response packets collected, explain the contents of the RIP messages only, excluding IP and UDP headers.
     \end{itemize}
     \begin{itemize}
-        \setlength{\itemindent}{0pt}
         \item Draw the distance tables and the routing tables in the routers based on Figure 4.11, assuming that number of hops is used as the metric.
         \item Verify the routing tables using the RIP messages you captured.
     \end{itemize}
@@ -162,17 +174,20 @@
 
 \section{RIP recover on link failure}
     In this exercise we will examine how RIP responds to link failures.
-    Send \textbf{ping} message continuously from \texttt{apah} to \texttt{yachi} and start \textbf{tcpdump} on \texttt{apah}.
-    Let the two programs run during this exercise. \\
-    Disconnect the cable from the \texttt{ethernet0} port of \texttt{router2} from the hub in the 128.238.62.0 subnet (you can use \texttt{shut} for interface in the router interface configuration state), and type the \textbf{date} command to get the current time. \\
-    Observe the \textbf{ping} and \textbf{tcpdump} windows.
-    When the connection is re-established, type the \textbf{date}  command again.
-    See how much time RIP takes to alter the routing table in your workstation to the new topology. \\
+    Send \lstinline{ping} message continuously from \textit{apah} to \textit{yachi} and start \lstinline{tcpdump} on \textit{apah}.
+    Let the two programs run during this exercise.
+
+    Disconnect the cable from the \textit{ethernet0} port of \textit{router2} from the hub in the 128.238.62.0 subnet (you can use \lstinline[language={cisco}]{shut} for interface in the router interface configuration state), and type the \lstinline{date} command to get the current time.
+
+    Observe the \lstinline{ping} and \lstinline{tcpdump} windows.
+    When the connection is re-established, type the \lstinline{date} command again.
+    See how much time RIP takes to alter the routing table in your workstation to the new topology.
+
     Once you can successfully reach other hosts, connect the cable to the original position.
     Again, measure the time that RIP takes to change your routing table.
-    \subsubsection*{Lab Report}
+    
+    \subsubsection*{Report}
     \begin{itemize}
-        \setlength{\itemindent}{0pt}
         \item Compare this time with the previous value in the spanning tree experiment.
         \item Explain why it takes this time for RIP to react to the route change.
         Refer to Section 4.2.4 for RIP operation and default timer values.
@@ -182,14 +197,17 @@
 \section*{Routing experiments with ICMP}
 \section{ICMP redirect}
     Eliminate the routing entries for subnets other than your own and the loopback interface.
-    Save the routing table for your lab report. \\
-    Create a default routing entry using one of the routers directly connected to your workstation. \\
-    While \textbf{tcpdump -enx -s 100 ip proto 1} is running, send \textbf{ping} messages to a host that is three hops away through the default router. \\
-    After capturing an ICMP redirect message, save the \textbf{tcpdump} output, the \textbf{ping} output, and your workstation’s routing table.
-    You may need to \textbf{ping} the same host several times in order to get your routing table updated.
-    \subsubsection*{Lab Report}
+    Save the routing table for your lab report.
+
+    Create a default routing entry using one of the routers directly connected to your workstation.
+
+    While \lstinline{tcpdump -enx -s 100 ip proto 1} is running, send \lstinline{ping} messages to a host that is three hops away through the default router.
+
+    After capturing an ICMP redirect message, save the \lstinline{tcpdump} output, the \lstinline{ping} output, and your workstation’s routing table.
+    You may need to \lstinline{ping} the same host several times in order to get your routing table updated.
+    
+    \subsubsection*{Report}
     \begin{itemize}
-        \setlength{\itemindent}{0pt}
         \item Submit what you saved in Exercise 4.
         \item Identify every field in the ICMP redirect message (see Figure 4.2).
         \item Compare the original routing table with the new routing table. Explain the meaning of the flags of the new entry.
@@ -199,20 +217,26 @@
 \section*{OSPF exercise}
     In order to enable OSPF in the routers, you need to create an OSPF routing process first.
     Then, define the range of IP addresses to be associated with the routing process and assign area IDs for these IP addresses, using the following commands:
-    \begin{itemize}
-        \item [] \texttt{Router(config)\#} \textbf{router ospf} \textit{process-id},
-        \item [] \texttt{Router(config)\#} \textbf{network} \textit{address wildcard-mask} \textbf{area} \textit{area-id}
-    \end{itemize}
-    \textit{Process-id} is a numeric value local to the router.
-    It does not have to match \textit{process-id}s on other routers.\\
-    \textit{address} is the network address of the interface on which the OSPF process runs (128.238.0.0 in our case).\\
+    \begin{lstlisting}[language={cisco}, emph={process-id, area-id, address, wildcard-mask}]
+Router(config)# router ospf process-id
+Router(config)# network address wildcard-mask area area-id
+    \end{lstlisting}
+    
+    \textit{process-id} is a numeric value local to the router.
+    It does not have to match \textit{process-id}s on other routers.
+
+    \textit{address} is the network address of the interface on which the OSPF process runs (128.238.0.0 in our case).
+
     \textit{wildcard-mask} helps reduce the number of configuration commands.
-    0 is a match and 1 is a “don’t care” bit (0.0.255.255 in our case).\\
+    0 is a match and 1 is a \textit{don’t care} bit (0.0.255.255 in our case).
+
     \textit{area-id} is the number of the area that the interfaces belong to (see Figure 4.7).
     It can be any integer between 0 and $2^{32} - 1$ or can have an IP address form.
-    Note that 0 is reserved for the backbone. \\
+    Note that 0 is reserved for the backbone. 
+
     The above commands are required to configure OSPF, while other tasks (configuring interface parameters, configuring area parameters, etc.) are optional.
-    For more information on other configuration tasks, refer to the router manual. \\
+    For more information on other configuration tasks, refer to the router manual. 
+
     Consider Figure 4.13 for our OSPF experiment.
     The lab instructor should reboot the routers to restore their default configurations.
     \begin{figure}[H]
@@ -222,27 +246,36 @@
 
 \section{OSPF messages}
     After connecting the cables properly, change the host IP addresses as given in Figure 4.13 You need to remove the default route added in Exercise 4 from the host routing table.
-    Note that the router interfaces are set as Fig. 4.13 by default. \\
-    Run the following command to capture any OSPF packets: \\
-    \textbf{tcpdump -x -s 120 ip proto 89} \\
+    Note that the router interfaces are set as Fig. 4.13 by default. 
+
+    Run the following command to capture any OSPF packets: 
+    \begin{lstlisting}
+tcpdump -x -s 120 ip proto 89
+    \end{lstlisting}
+
     Login to a directly connected router and start the OSPF process.
-    Set the argument \textit{area-id} to 1 for all the routers. \\
-    % The workstations in our lab run \textbf{routed} (which uses RIP).
-    % The routing daemon supporting OSPF, \textbf{gated}, is not installed.
-    In order to reach the routers and hosts in the other subnets, you need to add a default router in your host’s routing table. \\
+    Set the argument \textit{area-id} to 1 for all the routers. 
+
+    % The workstations in our lab run \lstinline{routed} (which uses RIP).
+    % The routing daemon supporting OSPF, \lstinline{gated}, is not installed.
+    In order to reach the routers and hosts in the other subnets, you need to add a default router in your host’s routing table. 
+
     Examine the routing table in each router (see Section 4.3).
-    When the routing table gets an entry for the network that is not directly connected, kill the \textbf{tcpdump} process and save the \textbf{tcpdump} output. \\
-    Collect the \textbf{tcpdump} outputs from other subnets.
-    Study the various types of OSPF packets from the \textbf{tcpdump} outputs. \\
+    When the routing table gets an entry for the network that is not directly connected, kill the \lstinline{tcpdump} process and save the \lstinline{tcpdump} output. 
+
+    Collect the \lstinline{tcpdump} outputs from other subnets.
+    Study the various types of OSPF packets from the \lstinline{tcpdump} outputs. 
+
     You can display OSPF information in a router using the following commands in the \textit{Privileged EXEC} mode.
-    \begin{verbatim}
-        show ip ospf
-        show ip ospf database [router|network|summary|asb-summary|external|database-summary]
-        show ip ospf interface ethernet [0|1]
-        show ip ospf neighbor
-        show ip ospf virtual-links
-    \end{verbatim}
-    \subsubsection*{Lab Report}
+    \begin{lstlisting}[language={cisco}]
+show ip ospf
+show ip ospf database [router|network|summary|asb-summary|external|database-summary]
+show ip ospf interface ethernet [0|1]
+show ip ospf neighbor
+show ip ospf virtual-links
+    \end{lstlisting}
+    
+    \subsubsection*{Report}
     \begin{itemize}
         \setlength{\itemindent}{0pt}
         \item Draw the common header of a saved OSPF message, giving the decimal values of the header fields (see Fig. 4.8).
@@ -253,34 +286,44 @@
     In this experiment, we reuse the network as shown in Figure 4.13.
 \section{Static routing}
     After checking the wiring, as shown in Figure 4.13, reboot the routers to restore their initial settings.
-    Check the IP addresses of the workstations as shown in Figure 4.13. \\
+    Check the IP addresses of the workstations as shown in Figure 4.13. 
+
     Remove all the routing entries other than your own subnet and the loopback interface from your host routing table.
-    Save the output of \textbf{netstat -rn} before building your workstation’s routing table. \\
-    Examine Figure 4.13 and build your host’s static routing table manually. \\
+    Save the output of \lstinline{netstat -rn} before building your workstation’s routing table. 
+
+    Examine Figure 4.13 and build your host’s static routing table manually. 
+
     Open console of the routers and save its routing table before building any route.
     Save the routing table of the other router if you have one more router connected directly.
-    In this case, copy the initial routing table of these routers from students in other subnets later. \\
+    In this case, copy the initial routing table of these routers from students in other subnets later. 
+
     Now configure the routing table in each router.
     See Section 4.3 for commands and syntax on manipulating router routing tables.
-    Note that each router should be configured by one person only. \\
-    \begin{itemize}
-        \item \textbf{ip route} \textit{}
-    \end{itemize}
-    Use \textbf{ping} to test the connections.
-    When you can reach all other subnets successfully,\footnote{Even when the routing table in your workstation and all the routers are configured perfectly, you may not be able to \textbf{ping} a remote host, if the routing table in the remote host is incorrect.
-    When you can get \textbf{ping} reply messages from all the interfaces of the routers successfully, your work is done for this exercise.} save the routing tables in your workstation and all the routers for the lab report.
-    \subsubsection*{Lab Report}
+    Note that each router should be configured by one person only. 
+
+    \begin{lstlisting}
+ip route
+    \end{lstlisting}
+
+    Use \lstinline{ping} to test the connections.
+    When you can reach all other subnets successfully,\footnote{Even when the routing table in your workstation and all the routers are configured perfectly, you may not be able to \lstinline{ping} a remote host, if the routing table in the remote host is incorrect.
+    When you can get \lstinline{ping} reply messages from all the interfaces of the routers successfully, your work is done for this exercise.} save the routing tables in your workstation and all the routers for the lab report.
+    
+    \subsubsection*{Report}
     Submit the routing tables saved in this exercise.
 
 
 \section*{Traceroute experiment}
 \section{Traceroute multi-hup path}
-    Execute \textbf{tcpdump -enx -s 100 host} \textit{your-host} \textbf{and} \textit{remote-host} on your host, where \textit{remote-host} is a workstation at least two hops away. \\
-    Then, execute \textbf{traceroute} \textit{remote-host} to find the route from your host to the remote host. \\
-    Save the output of both \textbf{traceroute} and \textbf{tcpdump}.
+    Execute \lstinline[emph={your-host, remote-host}]{tcpdump -enx -s 100 host your-host and remote-host} on your host, where \textit{remote-host} is a workstation at least two hops away. 
 
-    \subsubsection*{Lab Report}
-    Submit what you saved in this exercise. \\
-    From the \textbf{tcpdump} output, explain how the multi-hop route was found.
+    Then, execute \lstinline[emph={your-host, remote-host}]{traceroute remote-host} to find the route from your host to the remote host. 
+
+    Save the output of both \lstinline{traceroute} and \lstinline{tcpdump}.
+
+    \subsubsection*{Report}
+    Submit what you saved in this exercise. 
+
+    From the \lstinline{tcpdump} output, explain how the multi-hop route was found.
     Explain the sequence of the ICMP messages used.
 \end{document}
