--- a/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
+++ b/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
@@ -38,37 +38,46 @@
     \maketitle
 
 \section*{HTTP exercises}
-    For the exercises in this section, the network topology is simple with two hosts are connected to a single network segment with IP addresses, i.e., from 128.238.66.100 to 128.238.66.101. Add first host from \texttt{http-server} and another hsot from \texttt{gui}.
+    For the exercises in this section, the network topology is simple with two hosts are connected to a single network segment with IP addresses, i.e., from 128.238.66.100 to 128.238.66.101. Add first host from \textit{http-server} and another hsot from \textit{gui}.
 
 \section{HTTP Server}
-    Examine the various configuration directives used and the corresponding settings\footnote{\texttt{/etc/apache2/apache2.conf}}. \\
-    Start the Apache server on your host by: \textbf{service apache2 start}.
-    In order to check if the server is working properly, you may start a \texttt{Mozilla} web browser to download the test page at \texttt{http://remote\_host/}.\\
-    Then, execute \textbf{pgrep apache2} to list the process IDs of the \textbf{apache2} processes started.\footnote{By \texttt{a2enmod mpm\_prefork} you can enable Multi-Processing Module and change default spare process (config file: \texttt{/etc/apache2/mods-available/mpm\_prefork.conf})}
+    Examine the various configuration directives used and the corresponding settings\footnote{\path{/etc/apache2/apache2.conf}}. 
+
+    Start the Apache server on your host by: \lstinline{service apache2 start}.
+    In order to check if the server is working properly, you may start a \textit{Mozilla} web browser to download the test page at \url{http://remote-host/}.
+
+    Then, execute \lstinline{pgrep apache2} to list the process IDs of the \lstinline{apache2} processes started.\footnote{By \lstinline{a2enmod mpm_prefork} you can enable Multi-Processing Module and change default spare process (config file: \path{/etc/apache2/mods-available/mpm_prefork.conf}).}
     Save the output and the configuration file for the lab report.
+    
     \subsection*{Report}
     \begin{enumerate}
         \item How many apache2 processes were started?
-        Which one was the master server, and which ones were the child servers? (\texttt{use \textbf{htop} and switch to \textbf{tree} to see process hierarchy})
-        Justify your answer using the \texttt{apache2.conf} file.
+        Which one was the master server, and which ones were the child servers? (\textit{use \lstinline{htop} and switch to \textit{tree} to see process hierarchy})
+        Justify your answer using the \path{apache2.conf} file.
         \item What is the purpose of initiating multiple apache2 processes?
     \end{enumerate}
 
 \section{HTTP Request}
-    Execute \textbf{wireshark} to capture packets between your host and a remote host. \\
-    Login to the remote host’s web server: \textbf{telnet} \texttt{remote\_host} \textbf{80}. \\
+    Execute \lstinline{wireshark} to capture packets between your host and a remote host. 
+
+    Login to the remote host’s web server: \lstinline[emph={your-host, remote-host}]{telnet remote-host 80}. 
+
     In the login console, type the following HTTP request line by line:
-    \begin{verbatim}
-        GET /index.html HTTP/1.0
-        From: netlab@your_host
-        User-Agent: HTTPTool/1.0
-    \end{verbatim}
-    Note that you need to press the \texttt{Return} key to input the last line, which is blank.
-    When the \textbf{telnet} process is terminated, save the output for your lab report. \\
-    Terminate \textbf{wireshark} and analyze the captured HTTP packets.
-    Print and save the HTTP request and response. \\
-    Save the HTTP response’s data part into a file, named \texttt{index.html}.
-    Use \texttt{Mozilla} to view the file.
+    \begin{lstlisting}[language={HTTP},escapechar={},emph={your-host, remote-host}]
+GET /index.html HTTP/1.0
+From: netlab@your-host
+User-Agent: HTTPTool/1.0
+
+    \end{lstlisting}
+    Note that you need to press the \textit{Return} key to input the last line, which is blank.
+    When the \lstinline{telnet} process is terminated, save the output for your lab report. 
+
+    Terminate \lstinline{wireshark} and analyze the captured HTTP packets.
+    Print and save the HTTP request and response. 
+
+    Save the HTTP response’s data part into a file, named \path{index.html}.
+    Use \textit{Mozilla} to view the file.
+    
     \subsection*{Report}
     \begin{enumerate}
         \item Submit the HTTP request and response, including the start-lines and all the headers.
@@ -76,32 +85,41 @@
 
     
 \section{HTTP Keep-Alive}
-    By default, Apache server supports persistent connections. Before this exercise, the lab instructor should check the \texttt{KeepAlive} directive in the server configuration file \footnote{/etc/apache2/apache2.conf} to make sure it is turned on, as \texttt{KeepAlive On}. \\
-    Execute \textbf{tcpdump host \textit{your\_host} and \textit{remote\_host}} or run \textbf{wireshark} to capture packets between your host and a remote host. \\
-    
-    Enter the URL \texttt{http://remote-host/try1.html}, to download the HTML file consisting a line of text, an embedded picture, and a hyperlink.\\
+    By default, Apache server supports persistent connections. Before this exercise, the lab instructor should check the \texttt{KeepAlive} directive in the server configuration file \footnote{\path{/etc/apache2/apache2.conf}} to make sure it is turned on, as \lstinline[language={HTTP}]{KeepAlive On}. 
 
-    Disable Apache server persistent connections by change value of \texttt{KeepAlive} option to \textbf{Off} and restart \texttt{apache2} service\footnote{service apache2 restart}.\\
+    Execute \lstinline[emph={your-host, remote-host}]{tcpdump host your-host and remote-host} or run \lstinline{wireshark} to capture packets between your host and a remote host. 
+
     
-    Use \textbf{tcpdump host \textit{your\_host} and \textit{remote\_host}} or run \textbf{wireshark} and print the HTTP requests and responses for the lab report.
+    Enter the URL \url{http://remote-host/try1.html}, to download the HTML file consisting a line of text, an embedded picture, and a hyperlink.
+
+
+    Disable Apache server persistent connections by change value of \texttt{KeepAlive} option to \lstinline{Off} and restart \lstinline{apache2} service\footnote{\lstinline{service apache2 restart}}.
+
     
-    Use \texttt{Mozilla} to reload the \texttt{try1.html} file (use: \textbf{Ctrl+F5} to ignore cache).\\
-    Use \textbf{wireshark} and print the HTTP requests and responses for the lab report.
+    Use \lstinline[emph={your-host, remote-host}]{tcpdump host your-host and remote-host} or run \lstinline{wireshark} and print the HTTP requests and responses for the lab report.
+    
+    Use \textit{Mozilla} to reload the \url{try1.html} file. Use \textit{Ctrl+F5} to ignore cache.
+
+    Use \lstinline{wireshark} and print the HTTP requests and responses for the lab report.
 
     \subsection*{Report}
     \begin{enumerate}
-        \item When you browsed the \texttt{try1.html} file for the first time, how many HTTP requests were sent?
+        \item When you browsed the \path{try1.html} file for the first time, how many HTTP requests were sent?
         Which files were requested?
         How many TCP connections were used?
-        \item Answer the above questions for when you browsed the \texttt{try1.html} file for the second time.
+        \item Answer the above questions for when you browsed the \path{try1.html} file for the second time.
         \item What is the purpose of using persistent connections?
     \end{enumerate}
 
 \section{HTTP Submit}
-    Execute \textbf{wireshark} to capture packets between your host and a remote host. \\
-    Use \texttt{Mozilla} to download the \texttt{http://remote\_host/try2.htm} file, which is an \texttt{HTML} form, from the remote host. \\
-    Fill a text string, e.g., the name of the host being used, into the text field in the form and click the submit button in the form. \\
-    When the server response is received, terminate \textbf{wireshark}. \\
+    Execute \lstinline{wireshark} to capture packets between your host and a remote host. 
+
+    Use \textit{Mozilla} to download the \url{http://remote-host/try2.htm} file, which is an \textit{HTML} form, from the remote host. 
+
+    Fill a text string, e.g. the name of the host being used, into the text field in the form and click the submit button in the form. 
+
+    When the server response is received, terminate \lstinline{wireshark}. 
+
     Examine how LAMP (for php) [CGI (for perl)] works, and identify the data string sent to the server.
     Save the HTTP request containing the data string for lab report.
 
@@ -139,7 +157,7 @@
                         \draw[thick] (h6) -- (s);
                         \draw[thick] (h7) -- (s);
                     \end{tikzpicture}
-                    \caption{\textbf{Figure 1.3} A single segment network}
+                    \caption{\textit{Figure 1.3} A single segment network}
                     \label{fig:1.3}   
                 \end{figure}
             \end{flushright}
@@ -147,29 +165,41 @@
     \end{center}
 
 \section{DHCP server}
-    In this exercise, we use \texttt{h1} as the DHCP server, with a configuration file\footnote{\texttt{/etc/dhcp/dhcpd.conf}} shown in Table 8.3. Do the following.
+    In this exercise, we use \textit{h1} as the DHCP server, with a configuration file\footnote{\path{/etc/dhcp/dhcpd.conf}} shown in Table 8.3. Do the following.
 
     \begin{enumerate}
-        \item Change MAC address of \texttt{h5} in server configuration file (Table 8.3) by your \texttt{h5} MAC address and save to \texttt{dhcpd.conf}.
-        \item Set ip of \texttt{h1} to \texttt{128.238.66.100}
-        \item Start the DHCP server on \texttt{h1} in the foreground and working in the debugging mode: \textbf{dhcpd -d -f}\footnote{default }.
-        \item Execute \textbf{tcpdump -exn -nn -s 100} or \textbf{wireshark} to capture the DHCP messages in the network segment.
-        \item Then do the following to enable DHCP for the Ethernet interface on \texttt{h2}. \\
-        Run on \textbf{h2}: \texttt{ifconfig eth0 0} to clear ip of \texttt{eth0}\\
-        And run \texttt{dhclient eth0}\\
-        When shakti is successfully reconfigured, execute \textbf{ifconfig -a} or \textbf{ip a} to display its
-        network interface configurations and execute \textbf{netstat -rn} or \textbf{ip r} to display its routing table.\\
+        \item Change MAC address of \textit{h5} in server configuration file (Table 8.3) by your \textit{h5} MAC address and save to \textit{dhcpd.conf}.
+        
+        \item Set ip of \textit{h1} to {128.238.66.100}
+        
+        \item Start the DHCP server on \textit{h1} in the foreground and working in the debugging mode: \lstinline{dhcpd -d -f}\footnote{default }.
+        
+        \item Execute \lstinline{tcpdump -exn -nn -s 100} or \lstinline{wireshark} to capture the DHCP messages in the network segment.
+        
+        \item Then do the following to enable DHCP for the Ethernet interface on \textit{h2}. 
+
+        Run \lstinline{ifconfig eth0 0} on \lstinline{h2} to clear ip of \textit{eth0}
+
+        And run \lstinline{dhclient eth0}.
+
+        When \textit{shakti} is successfully reconfigured, execute \lstinline{ifconfig -a} or \lstinline{ip a} to display its
+        network interface configurations and execute \lstinline{netstat -rn} or \lstinline{ip r} to display its routing table.
+
         Save the outputs for the lab report.
-        \item Then, repeat 5 for \texttt{h3}.
-        \item Repeat 5 for \texttt{h4}.
-        \item Repeat 5 for \texttt{h5}.
+        
+        \item Then, repeat 5 for \textit{h3}.
+        
+        \item Repeat 5 for \textit{h4}.
+        
+        \item Repeat 5 for \textit{h5}.
     \end{enumerate}
-    Terminate \textbf{wireshark}. Print out the DHCP messages for the lab report. \\
-    Save the DHCP server output on \texttt{h1} for the lab report.
+    Terminate \lstinline{wireshark}. Print out the DHCP messages for the lab report. 
+
+    Save the DHCP server output on \textit{h1} for the lab report.
 
     \subsection*{Table 8.3: A DHCP server configuration file}
-    \texttt{/etc/dhcp/dhcpd.conf}
-    \begin{verbatim}
+    \path{/etc/dhcp/dhcpd.conf}
+    \begin{lstlisting}[language={conf}]
     default-lease-time 600;
     max-lease-time 7200;
     option subnet-mask 255.255.255.0;
@@ -186,18 +216,18 @@
         hardware ethernet 08:00:20:79:e9:9f;
         fixed-address 128.238.66.110;
     }
-    \end{verbatim}
+    \end{lstlisting}
 
     \subsection*{Report}
     \begin{enumerate}
-        \item Compare the DHCP operation captured by \textbf{wireshark} and that shown by the DHCP server output.
+        \item Compare the DHCP operation captured by \lstinline{wireshark} and that shown by the DHCP server output.
         Explain how DHCP works.
-        \item Did \texttt{h2} and \texttt{h3} successfully obtain a set of new parameters?
+        \item Did \textit{h2} and \textit{h3} successfully obtain a set of new parameters?
         Compare the ifconfig and netstat output with the parameters carried in the corresponding DHCP messages.
-        \item Answer the above question for \texttt{h4}.
-        Explain why \texttt{h4} failed.
-        \item Answer the above question for \texttt{h5}.
-        Explain why \texttt{h5} succeeded.
+        \item Answer the above question for \textit{h4}.
+        Explain why \textit{h4} failed.
+        \item Answer the above question for \textit{h5}.
+        Explain why \textit{h5} succeeded.
     \end{enumerate}
 
 \section*{NTP exercises}
@@ -230,29 +260,27 @@
     \end{center}
 
 \section{NTP Local Date}
-    Execute \textbf{date} to display the system time of your host. Display the manual page of \textbf{date}, and study its options and usages.
-    Try the following \textbf{date} commands: \\
-    \begin{lstlisting}[language=bash,
-        basicstyle=\ttfamily,
-        showstringspaces=false,
-        commentstyle=\color{green},
-        keywordstyle=\color{black}]
-    date --date='2 days ago'
-    date --date='3 months 2 days'
-    date --set='+3 minutes'
-    date -r file_name
+    Execute \lstinline{date} to display the system time of your host. Display the manual page of \lstinline{date}, and study its options and usages.
+    Try the following \lstinline{date} commands: 
+
+    \begin{lstlisting}[emph={file-name}]
+date --date='2 days ago'
+date --date='3 months 2 days'
+date --set='+3 minutes'
+date -r file-name
     \end{lstlisting}
-    You can choose any file in the current directory for the \textit{file\_name} parameter.
+    You can choose any file in the current directory for the \textit{file-name} parameter.
+    
     \subsection*{Report}
     \begin{enumerate}
-        \item Submit the \textbf{date} outputs you saved.
+        \item Submit the \lstinline{date} outputs you saved.
         Explain the use of the commands.
     \end{enumerate}
 
 \section{Remote Date}
-    While \textbf{tcpdump -n -nn -ex host \textit{your\_host} and \textit{remote\_host}} or \textbf{wireshark} is running, execute \textbf{rdate -p} \textit{remote\_host} to display the system time of the remote machine.
-    Repeat the above \textbf{rdate} command, but use the \textbf{-u} option.
-    Save the \textbf{wireshark} outputs for the lab report.
+    While \lstinline[emph={your-host, remote-host}]{tcpdump -n -nn -ex host your-host and remote-host} or \lstinline{wireshark} is running, execute \lstinline[emph={your-host, remote-host}]{rdate -p remote-host} to display the system time of the remote machine.
+    Repeat the above \lstinline{rdate} command, but use the \lstinline{-u} option.
+    Save the \lstinline{wireshark} outputs for the lab report.
 
     \subsection*{Report}
     \begin{enumerate}
@@ -263,29 +291,36 @@
     \end{enumerate}
 
 \section{NTP Sync}
-    In this exercise, we start the NTP server daemon on \texttt{h0} and use NTP to
-    synchronize all the other hosts to \texttt{h0}.
-    Study the NTP configuration file \texttt{/etc/ntp.conf} in \texttt{h0} and in your host.
-    If you are using another machine, you can telnet to \texttt{h0} and display the \texttt{/etc/ntp.conf} file in the telnet window.
-    Start the NTP server on \texttt{h0} by: \textbf{service ntp start}.
-    To determine the status of the NTP server, use \textbf{service ntp status}.
-    Use \textbf{tcpdump -ex -n -nn host \textit{your\_host} and \textit{h0}} or \textbf{wireshark} to capture packets between your host and \texttt{h0}.
-    Execute \textbf{ntpdate -d -v 128.238.66.100} to synchronize other host to \texttt{h0}.
+    In this exercise, we start the NTP server daemon on \textit{h0} and use NTP to
+    synchronize all the other hosts to \textit{h0}.
+    Study the NTP configuration file \path{/etc/ntp.conf} in \textit{h0} and in your host.
+    If you are using another machine, you can telnet to \textit{h0} and display the \path{/etc/ntp.conf} file in the telnet window.
+    Start the NTP server on \textit{h0} by \lstinline{service ntp start}.
+    To determine the status of the NTP server, use \lstinline{service ntp status}.
+    Use \lstinline[emph={your-host, remote-host, h0}]{tcpdump -ex -n -nn host your-host and h0} or \lstinline{wireshark} to capture packets between your host and \textit{h0}.
+    Execute \lstinline{ntpdate -d -v 128.238.66.100} to synchronize other host to \textit{h0}.
     Study the output of this command.
-    Save the \textbf{ntpdate} and the \textbf{wireshark} outputs for the lab report.
+    Save the \lstinline{ntpdate} and the \lstinline{wireshark} outputs for the lab report.
+    
     \subsection*{Report}
     \begin{enumerate}
         \item Which port does the NTP server use?
-        Justify your answer using the \textbf{wireshark} output.
+        Justify your answer using the \lstinline{wireshark} output.
     \end{enumerate}
 
 \section{NTP server}
-    Keep the NTP server running on \texttt{h0}. Execute \textbf{tcpdump -exn -nn host \textit{your\_host} and \textit{128.238.66.100}} or \textbf{wireshark} to capture the NTP messages between \texttt{your\_host} and \texttt{h0}.\\
-    Config \texttt{/etc/ntp.conf} in \texttt{other\_host} and add \textbf{server 128.238.66.100} to config file.\\
-    Start the NTP clients on your host, by \textbf{service ntp start}.\\
-    Wait for several minutes. Then terminate the \textbf{tcpdump} program. Analyze the captured NTP packets. Print one of the NTP packets for the lab report.\\
-    Execute \textbf{ntpq -p} to get \textbf{ntp} server list.\\
-    Execute \textbf{ntptrace} to show the client/server relation of NTP.\\
+    Keep the NTP server running on \textit{h0}. Execute \lstinline[emph={your-host, remote-host}]{tcpdump -exn -nn host your-host and 128.238.66.100} or \lstinline{wireshark} to capture the NTP messages between \textit{your-host} and \textit{h0}.
+
+    Config \path{/etc/ntp.conf} in \textit{other-host} and add \lstinline[language={conf}]{server 128.238.66.100} to config file.
+
+    Start the NTP clients on your host, by \lstinline{service ntp start}.
+
+    Wait for several minutes. Then terminate the \lstinline{tcpdump} program. Analyze the captured NTP packets. Print one of the NTP packets for the lab report.
+
+    Execute \lstinline{ntpq -p} to get \lstinline{ntp} server list.
+
+    Execute \lstinline{ntptrace} to show the client/server relation of NTP.
+
 
     \subsection*{Report}
     \begin{enumerate}
@@ -299,7 +334,7 @@
     \begin{figure}[H]
         \centering
         \includegraphics[width=0.9\textwidth]{img/fig1.png}
-        \caption{\textbf{Figure 8.7.} The network configuration for the NAT exercises.}
+        \caption{\textit{Figure 8.7.} The network configuration for the NAT exercises.}
         \label{fig:8.7}
     \end{figure}
 
@@ -307,42 +342,48 @@
     Connect the hosts and Router 1 as shown in Fig.
     8.7. Then set the IP address and the network mask of your host as shown in the figure.
     In addition, you need to add a default route in your host’s routing table, using the router interface on your subnet as the default router.
-    One student should \textbf{telnet} to the router and configure the router as shown in Table 8.5. Note that there is a static translation that maps 10.0.0.7, or \texttt{guchi}, to 128.238.61.104.
-    Login to the router, execute \textbf{write term} to display the current router configuration.
-    Execute \textbf{show ip nat translations} in the \textit{Privileged EXEC} mode to display the translation table.
-    Save both outputs for the lab report.\\
+    One student should \lstinline{telnet} to the router and configure the router as shown in Table 8.5. Note that there is a static translation that maps 10.0.0.7, or \textit{guchi}, to 128.238.61.104.
+    Login to the router, execute \lstinline{write term} to display the current router configuration.
+    Execute \lstinline{show ip nat translations} in the \textit{Privileged EXEC} mode to display the translation table.
+    Save both outputs for the lab report.
+
     \subsection*{Report}
     \begin{enumerate}
         \item How many entries were there in the translation table? Why?
     \end{enumerate}
     
     \subsection*{NAT Router Configuration in Fig. 8.7}
-    \begin{verbatim}
-        ip nat pool mypool 128.238.61.102 128.238.61.103 netmask 255.255.255.0
-        ip nat inside source list 8 pool mypool
+    \begin{lstlisting}[language={cisco}]
+ip nat pool mypool 128.238.61.102 128.238.61.103 netmask 255.255.255.0
+ip nat inside source list 8 pool mypool
 
-        ip nat inside source static 10.0.0.7 128.238.61.104
+ip nat inside source static 10.0.0.7 128.238.61.104
 
-        interface ethernet 0
-        ip address 128.238.61.1 255.255.255.0
-        no shut
-        ip nat outside
+interface ethernet 0
+ip address 128.238.61.1 255.255.255.0
+no shut
+ip nat outside
 
-        interface ethernet 1
-        ip address 10.0.0.1 255.0.0.0
-        no shut
-        ip nat inside
+interface ethernet 1
+ip address 10.0.0.1 255.0.0.0
+no shut
+ip nat inside
 
-        access-list 8 deny host 10.0.0.7
-        access-list 8 permit 10.0.0.0 0.0.0.255
-    \end{verbatim}
+access-list 8 deny host 10.0.0.7
+access-list 8 permit 10.0.0.0 0.0.0.255
+    \end{lstlisting}
 
 \section{NAT Visibility}
-    Keep the login session to the router running. Execute \textbf{tcpdump -exn -nn} or \textbf{wireshark} on all the hosts. \\
-    Before any host in the private network send any packets out, \textbf{ping} an inside host (e.g., \texttt{fenchi}) from an outside host (e.g., \texttt{vayu}). You may try to \textbf{ping} \texttt{10.0.0.5, 128.238.61.102, 128.238.61.103, or 128.238.61.104}. Can you \textbf{ping} these IP addresses? \\
-    Let an inside host send packets to an outside host, e.g., from \texttt{fenchi}, execute \textbf{ping} 128.238.61.100. Can you \textbf{ping} \texttt{fenchi} from an outside host now? Why? Which IP address should be used in the \textbf{ping} command in order to \textbf{ping} \texttt{fenchi}? \\
-    Execute show ip nat translations in the router login window to display the translation table. Save the output for the lab report. \\
+    Keep the login session to the router running. Execute \lstinline{tcpdump -exn -nn} or \lstinline{wireshark} on all the hosts. 
+
+    Before any host in the private network send any packets out, \lstinline{ping} an inside host (e.g. \textit{fenchi}) from an outside host (e.g. \textit{vayu}). You may try to \lstinline{ping} \textit{10.0.0.5, 128.238.61.102, 128.238.61.103, or 128.238.61.104}. Can you \lstinline{ping} these IP addresses? 
+
+    Let an inside host send packets to an outside host, e.g. from \textit{fenchi}, execute \lstinline{ping} 128.238.61.100. Can you \lstinline{ping} \textit{fenchi} from an outside host now? Why? Which IP address should be used in the \lstinline{ping} command in order to \lstinline{ping} \textit{fenchi}? 
+
+    Execute show ip nat translations in the router login window to display the translation table. Save the output for the lab report. 
+
     Exchange the data you saved with a student in the other subnet.
+    
     \subsection*{Report}
     \begin{enumerate}
         \item Answer the above questions.
@@ -353,12 +394,17 @@
     \end{enumerate}
 
 \section{NAT Table}
-    Keep the login session to the router running. Execute \textbf{tcpdump -enx -s 100 ip proto 1} or \textbf{wireshark} to capture ICMP messages. \\
-    Execute \textbf{socket -i -u -n1 128.238.61.101 8888} on \texttt{agni} to generate an ICMP port unreachable error. \\
-    Print the ICMP error message for the lab report. \\
-    Execute \textbf{show ip nat translations} in the router login window to display the translation table.
-    Save the output for the lab report.\\
+    Keep the login session to the router running. Execute \lstinline{tcpdump -enx -s 100 ip proto 1} or \lstinline{wireshark} to capture ICMP messages. 
+
+    Execute \lstinline{socket -i -u -n1 128.238.61.101 8888} on \textit{agni} to generate an ICMP port unreachable error. 
+
+    Print the ICMP error message for the lab report. 
+
+    Execute \lstinline{show ip nat translations} in the router login window to display the translation table.
+    Save the output for the lab report.
+
     Exchange the data you saved with a student in the other subnet.
+    
     \subsection*{Report}
     \begin{enumerate}
         \item Analyze the IP headers, the ICMP headers, and the ICMP payloads of the ICMP port unreachable errors captured in the private network and in the public network from the first experiment.
@@ -367,55 +413,66 @@
 
 \section{NAT and PAT}
     Reboot the router to restore its default configuration.
-    Then, configure the router to use PAT, as given in Table 8.6. Now all the hosts in the private network use the same IP address 128.238.61.1. However, note that there is a static translation that maps guchi’s port 80 to 128.238.61.1 port 80. \\
-    Execute \textbf{tcpdump} on all the hosts. \\
+    Then, configure the router to use PAT, as given in Table 8.6. Now all the hosts in the private network use the same IP address 128.238.61.1. However, note that there is a static translation that maps guchi’s port 80 to 128.238.61.1 port 80. 
+
+    Execute \lstinline{tcpdump} on all the hosts. 
+
     Generate traffic between the inside and outside hosts.
-    Examine the \textbf{tcpdump} output to see how PAT works.\\
-    Start the Apache web server on \texttt{guchi}. Also, start the web browser \texttt{Mozilla} on an outside host (e.g., \texttt{shakti}), and enter the URL \texttt{http://128.238.61.1}. Save the \textbf{tcpdump} output.\\
-    Use \textbf{show ip nat translations} to display and then save the translation table.
+    Examine the \lstinline{tcpdump} output to see how PAT works.
+
+    Start the Apache web server on \textit{guchi}. Also, start the web browser \textit{Mozilla} on an outside host (e.g. \textit{shakti}), and enter the URL \url{http://128.238.61.1}. Save the \lstinline{tcpdump} output.
+
+    Use \lstinline{show ip nat translations} to display and then save the translation table.
     Exchange the data you saved with a student in the other subnet.
+
     \subsection*{Report}
     \begin{enumerate}
-        \item From the \textbf{wireshark} data, explain how PAT worked, both for a dynamic translation and a static translation.
+        \item From the \lstinline{wireshark} data, explain how PAT worked, both for a dynamic translation and a static translation.
+        
         \item With PAT, can you have two web servers in the private network?
         If not, why?
         If yes, explain how this can be done.
     \end{enumerate}
 
     \subsection*{PAT Router Configuration in Fig. 8.7}
-    \begin{verbatim}
-        ip nat inside source list 8 interface ethernet 0 overload
+    \begin{lstlisting}[language={cisco}]
+ip nat inside source list 8 interface ethernet 0 overload
 
-        ip nat inside source static tcp 10.0.0.7 80 128.238.61.1 80
+ip nat inside source static tcp 10.0.0.7 80 128.238.61.1 80
 
-        interface ethernet 0
-        ip address 128.238.61.1 255.255.255.0
-        no shut
-        ip nat outside
+interface ethernet 0
+ip address 128.238.61.1 255.255.255.0
+no shut
+ip nat outside
 
-        interface ethernet 1
-        ip address 10.0.0.1 255.0.0.0
-        no shut
-        ip nat inside
+interface ethernet 1
+ip address 10.0.0.1 255.0.0.0
+no shut
+ip nat inside
 
-        access-list 8 deny host 10.0.0.7
-        access-list 8 permit 10.0.0.0 0.0.0.255
-    \end{verbatim}
+access-list 8 deny host 10.0.0.7
+access-list 8 permit 10.0.0.0 0.0.0.255
+    \end{lstlisting}
 
 \section*{Socket programming exercises}
 \section{Socket programming}
-    Examine the UDP socket programs \texttt{/home/netlab/code/UDPserver.c} and \texttt{/home/netlab/code/UDPclient.c} to learn how to write a UDP socket program.
-    You can compile the C programs by using \texttt{gcc -o UDPserver UDPserver.c -lnsl} and \texttt{gcc -o UDPclient UDPclient.c -lnsl}. Compile output available at \texttt{/usr/local/bin/} directory.\\
-    Start \textbf{tcpdump host \textit{remote\_host}} \textbf{wireshark} to capture packets from or to a remote host. \\
-    On the remote host, start the UDP server by \textbf{UDPserver server\_port}.
-    Then, start the UDP client on your host by \textbf{UDPclient remote\_host server\_port a\_message}.
-    You may execute the UDP client program on other hosts to connect to the same UDP server.\\
-    Terminate \textbf{tcpdump}, examine its output and compare the output with the UDP server and client outputs.\\
-    Repeat the above experiments, but now use the \texttt{TCPserver.c} and \texttt{TCPclient.c}.
+    Examine the UDP socket programs \path{/home/netlab/code/UDPserver.c} and \path{/home/netlab/code/UDPclient.c} to learn how to write a UDP socket program.
+    You can compile the C programs by using \lstinline{gcc -o UDPserver UDPserver.c -lnsl} and \lstinline{gcc -o UDPclient UDPclient.c -lnsl}. Compile output available at \path{/usr/local/bin/} directory.
+
+    Start \lstinline[emph={your-host, remote-host}]{tcpdump host remote-host} or \lstinline{wireshark} to capture packets from or to a remote host. 
+
+    On the remote host, start the UDP server by \lstinline[emph={server-port}]{UDPserver server-port}.
+    Then, start the UDP client on your host by \lstinline[emph={your-host, remote-host, server-port, a-message}]{UDPclient remote-host server-port a-message}.
+    You may execute the UDP client program on other hosts to connect to the same UDP server.
+
+    Terminate \lstinline{tcpdump}, examine its output and compare the output with the UDP server and client outputs.
+
+    Repeat the above experiments, but now use the \path{TCPserver.c} and \path{TCPclient.c}.
 
 \section{Socket options}
-    Execute \textbf{man setsockopt} to display the various socket options and how to set them.\\
-    Examine the \textbf{netspy} and \textbf{netspyd} source code in Appendix C.2 to see how to create a multicast socket and how to set the TTL value for the packets.
+    Execute \lstinline{man setsockopt} to display the various socket options and how to set them.
+
+    Examine the \lstinline{netspy} and \lstinline{netspyd} source code in Appendix C.2 to see how to create a multicast socket and how to set the TTL value for the packets.
 
     % \subsection*{Report}
     % \begin{enumerate}
@@ -433,12 +490,12 @@
     \begin{itemize}
         \item First you need to set up the control connection to Port 21 of the remote machine, using a TCP socket.
         \item When the control connection is established, you need to exchange FTP commands with the remote FTP server, as given in Table 5.1.
-        \item You can first run \textbf{telnet remote\_host 21}, then type \textbf{help} to list all the FTP commands.
-        Also, you can try the commands out in the \textbf{telnet} window, e.g.\  use \textbf{USER netlab} to send the user ID and \textbf{PASS netlab} to send the password to the FTP server.
-        To terminate the \textbf{telnet} session, type \textbf{QUIT}.
-        \item In your program, these messages should be sent to the FTP server by calling the \textbf{send()} function of the local TCP socket.
+        \item You can first run \lstinline{telnet remote-host 21}, then type \lstinline{help} to list all the FTP commands.
+        Also, you can try the commands out in the \lstinline{telnet} window, e.g. use \lstinline{USER netlab} to send the user ID and \lstinline{PASS netlab} to send the password to the FTP server.
+        To terminate the \lstinline{telnet} session, type \lstinline{QUIT}.
+        \item In your program, these messages should be sent to the FTP server by calling the \lstinline{send()} function of the local TCP socket.
         \item Also your program needs to parse the server responses (some examples are given in Table 5.2) to find out the status of the previous FTP command.
-        \item The FTP data connection should be established using the \textbf{PORT} command (see Chapter 5).
+        \item The FTP data connection should be established using the \lstinline{PORT} command (see Chapter 5).
     \end{itemize}
 
 \end{document}
